Dark mode border fix

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -23,8 +23,8 @@
 		--text: #c9c9c9;
 		--text-secondary: #a1a1a1;
 
-		--border: rgba(255, 255, 255, 0.05);
-		--border-dark: rgba(255, 255, 255, 0.1);
+		--border: #555555;
+		--border-dark: #727272;
 
 		--header-background: #0e0e0e;
 
